--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 # Project information
 site_name: Destiny 2 Guides
 site_description: Guides and General Info for Destiny 2
+site_url: https://ras117mike.github.io/Destiny2/
 
 # Copyright
 copyright: 'Copyright &copy; 2019 - Present'
