--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ nav:
     - The Cabal: the_cabal.md
     - The Fallen: the_fallen.md
     - The Hive: the_hive.md
+    - The Scorn: the_scorn.md
+    - The Taken: the_taken.md
     - The Vex: the_vex.md
   - Seals: legend_seals.md
   # <!-- START DESTINY 2 MATERIAL -->
