updated layout and added proper url for panoptes on index.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -259,8 +259,8 @@ theme:
     primary: 'light green'
     accent: 'green'
 
-#extra_css:
-#  - 'stylesheets/extra.css'
+extra_css:
+  - 'stylesheets/extra.css'
 
 # Social
 extra:
