narrowed layout in css.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - The Taken: the_taken.md
     - The Vex: the_vex.md
   - Seals: legend_seals.md
+  - Challenges: challenges.md
   # <!-- START DESTINY 2 MATERIAL -->
   - Classes:
     - Hunter: hunter_class.md
